# articles

./: .env  docker-compose.yaml  pyproject.toml
backend/: .env  Dockerfile  main.py  requirements.txt  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_14_2338-c8f15b6068c7_initial_table_almost_empty.py  2026_04_15_1949-90baf730a6d8_.py  2026_04_16_2258-b5a043db7ae4_.py  2026_04_18_2034-eacce916a060_.py  2026_04_18_2043-38d3237cf50a_.py
backend/all_cruds/: cached_crud.py  def_crud.py  rel_crud.py
backend/authorization/: __init__.py  auth_deps.py  token_enc_dec.py  token_schema.py  utilities.py
backend/back_backend/: middleware.py  pre_post.py
backend/certs/: jwtRS256.key
backend/core/: __init__.py  base_class.py  config.py  db_helper.py
backend/mod_sch/: __init__.py  mixins.py  models.py  schemas.py
backend/routers/: all_test_router.py  auth_router.py  del_patch_router.py  get_post_router.py
backend/services/: embeddings.py  weaviate_index.py
backend/tests/: confest.py  test_main.py
certs/: jwtRS256.key.pub
config/prometheus/: prometheus.yml
frontend/: Dockerfile  index.html
frontend/html_pages/: add_article.html  articles_center.html  delete_page.html  main_page.html  register.html  update_article.html
frontend/html_scripts/: add_article.js  articles_getter.js  funcs.js  funcs_deleter.js  funcs_getter.js  funcs_getters.js  funcs_updater.js  login.js  register.js
